--- a/Order-summary-component/index.html
+++ b/Order-summary-component/index.html
@@ -1,37 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Order summary card</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+    <title>Frontend Mentor | Order summary card</title>
+
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <!-- css -->
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
-<body>
 
-  Order Summary
+<body class="d-flex justify-content-center align-items-center flex-column text-center mx-3 my-md-0 mx-md-0">
+    <main class="overflow-hidden">
+        <section class="d-flex flex-column justify-content-center align-items-center bg-white m-auto">
+            <img class="img-fluid" src="./images/illustration-hero.svg" alt="person listening to music">
+            <div class="p-5" role="region">
+                <h4 class="mb-3">
+                    Order Summary
+                </h4>
+                <p>
+                    You can now listen to millions of songs, audiobooks, and podcasts on any
+                    device anywhere you like!
+                </p>
+                <div class="d-flex justify-content-center align-items-center m-auto a-plan p-3" role="region">
+                    <img src="./images/icon-music.svg" alt="music icon">
+                    <div class="ml-3" role="region">
+                        <h5 class="m-0 mb-1">
+                            Annual Plan
+                        </h5>
+                        <p class="m-0 mt-1">
+                            $59.99/year
+                        </p>
+                    </div>
+                    <a href="#" class="ml-auto l-change">
+                        Change
+                    </a>
 
-  You can now listen to millions of songs, audiobooks, and podcasts on any 
-  device anywhere you like!
+                </div>
+                <button type="submit" class="d-block w-100 my-4 py-3">
+                    Proceed to Payment
+                </button>
 
-  Annual Plan
-  $59.99/year
+                <button type="reset">
+                    Cancel Order
+                </button>
+            </div>
 
-  Change
+        </section>
+    </main>
 
-  Proceed to Payment
-  Cancel Order
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+
+    <div class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+        Coded by <a href="#">Fernandoaacf</a>.
+    </div>
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 </body>
+</body>
+
 </html>
