link correto (repositório)

--- a/Order-summary-component/index.html
+++ b/Order-summary-component/index.html
@@ -62,7 +62,7 @@
 
     <div class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-        Coded by <a href="https://fernandoaacf86.github.io/front-end-mentor/Order-summary-component/index.html">Fernandoaacf</a>.
+        Coded by <a href="https://github.com/fernandoaacf86/front-end-mentor/tree/main/Order-summary-component">Fernandoaacf</a>.
     </div>
 
     <!-- Optional JavaScript -->
