--- a/nft-preview-card-component-main/index.html
+++ b/nft-preview-card-component-main/index.html
@@ -60,7 +60,7 @@
     </main>
     <footer class="attribution text-white">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-        Coded by <a href="">Fernandoaacf</a>.
+        Coded by <a href="https://github.com/fernandoaacf86/front-end-mentor/tree/main/nft-preview-card-component-main" target="_blank">Fernandoaacf</a>.
     </footer>
 
 
