html5 aria corrections

--- a/nft-preview-card-component-main/index.html
+++ b/nft-preview-card-component-main/index.html
@@ -33,9 +33,9 @@
         </section>
         <section class="section-2">
             <article>
-                <h4 class="align-self-baseline pt-3 cyan-hover">
+                <h1 class="align-self-baseline pt-3 cyan-hover">
                     Equilibrium #3429
-                </h4>
+                </h1>
                 <p class="soft-bl-p">
                     Our Equilibrium collection promotes balance and calm.
                 </p>
@@ -52,7 +52,7 @@
             </article>
             <article class="d-flex justify-content-start align-items-center pt-3 mr-auto">
                 <div role="img" aria-label="Jules Wyvern avatar">
-                    <img src="./images/image-avatar.png" alt="" width="35px" height="35px" class="img-fluid border border-white rounded-circle">
+                    <img src="./images/image-avatar.png" alt="" width="35" height="35" class="img-fluid border border-white rounded-circle">
                 </div>
                 <p class="m-0 ml-3 soft-bl-p">Creation of <span class="cyan-hover">Jules Wyvern</span></p>
             </article>
