--- a/testimonials-grid-section-main/index.html
+++ b/testimonials-grid-section-main/index.html
@@ -209,7 +209,7 @@
     <footer>
         <div class="attribution">
             Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-            Coded by <a href="#">Your Name Here</a>.
+            Coded by <a href="https://github.com/fernandoaacf86/front-end-mentor/tree/main/testimonials-grid-section-main" target="_blank">Fernandoaacf</a>.
         </div>
     </footer>
 
