body margin top

--- a/stats-preview-card-component-main/index.html
+++ b/stats-preview-card-component-main/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="./css/styes.css">
 </head>
 
-<body class="d-flex justify-content-center alighn align-items-center flex-column text-center text-md-left mx-4 m-md-0">
+<body class="d-flex justify-content-center alighn align-items-center flex-column text-center text-md-left mx-4 my-5 m-md-0">
     <main class="d-flex flex-column-reverse flex-md-row justify-content-center align-items-center">
         <!-- left section -->
         <section class="pb-4 pt-5 px-5 p-md-5 mr-md-5">   
