--- a/interactive-rating-component-main/index.html
+++ b/interactive-rating-component-main/index.html
@@ -1,48 +1,91 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Interactive rating component</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    
-  </style>
+    <title>Frontend Mentor | Interactive rating component</title>
+
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
-<body class="">
 
-  <!-- Rating state start -->
+<body class="d-flex flex-column justify-content-center align-items-center ">
+    <main class="d-flex justify-content-center p-4 flex-column">
+        <section id="section-01">
+            <div class="d-inline" aria-label="star icon">
+                <img src="./images/icon-star.svg" class="img-fluid p-3 rounded-circle">
+            </div>
+            <h1 class="mt-4">
+                How did we do?
+            </h1>
+            <p class="mt-3">
+                Please let us know how we did with your support request. All feedback is appreciated
+                to help us improve our offering!
+            </p>
+            <!-- Rating state start -->
 
-  How did we do?
+            <div class="d-flex justify-content-between mt-4 mb-3" id="ratings" role="region">
+                <p class="px-4 py-3 rounded-circle text-center" onclick="ativarBtn(0)">1</p>
+                <p class="px-4 py-3 rounded-circle text-center" onclick="ativarBtn(1)">2</p>
+                <p class="px-4 py-3 rounded-circle text-center" onclick="ativarBtn(2)">3</p>
+                <p class="px-4 py-3 rounded-circle text-center" onclick="ativarBtn(3)">4</p>
+                <p class="px-4 py-3 rounded-circle text-center" onclick="ativarBtn(4)">5</p>
+            </div>
 
-  Please let us know how we did with your support request. All feedback is appreciated 
-  to help us improve our offering!
+            <button type="submit" onclick="classChange()">
+                Submit
+            </button>
 
-  1 2 3 4 5
+        </section>
+        <section id="section-02" class="text-center d-none">
+            <div class="d-flex justify-content-center mb-4 mt-4" aria-label="thank you illustration">
+                <img src="./images/illustration-thank-you.svg" alt="" class="">
+            </div>
+            <!-- Thank you state start -->
+            <h6 class="px-3 py-2 d-inline-block mb-4">
+                You selected <span id="nota"></span> out of 5
+            </h6>
 
-  Submit
+            <p class="tks mb-2">
+                Thank you!
+            </p>
+            <p>
+                We appreciate you taking the time to give a rating. If you ever need more support,
+                don't hesitate to get in touch!
+            </p>
+        </section>
+    </main>
+    <footer>
+        <div class="attribution">
+            Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+            Coded by <a href="https://github.com/fernandoaacf86/front-end-mentor/tree/main/interactive-rating-component-main" target="_blank">Fernandoaacf</a>.
+        </div>
+    </footer>
 
-  <!-- Rating state end -->
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 
-  <!-- Thank you state start -->
-
-  You selected <!-- Add rating here --> out of 5
-
-  Thank you!
-
-  We appreciate you taking the time to give a rating. If you ever need more support, 
-  don’t hesitate to get in touch!
-
-  <!-- Thank you state end -->
-
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    <!-- JS -->
+    <script src="./js/scripts.js"></script>
 </body>
+
 </html>
