--- a/interactive-rating-component-main/index.html
+++ b/interactive-rating-component-main/index.html
@@ -66,9 +66,13 @@
         </section>
     </main>
     <footer>
-        <div class="attribution">
-            Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-            Coded by <a href="https://github.com/fernandoaacf86/front-end-mentor/tree/main/interactive-rating-component-main" target="_blank">Fernandoaacf</a>.
+        <div class="attribution text-center d-sm-flex">
+            <p class="mb-0 mr-sm-2">
+                Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+            </p>
+            <p class="mb-0">
+                Coded by <a href="https://github.com/fernandoaacf86/front-end-mentor/tree/main/interactive-rating-component-main" target="_blank">Fernandoaacf</a>.
+            </p>
         </div>
     </footer>
 
